bin/testsuite/tests/compiler/src/errors/compiler232.swg
#global testerror "Err0737"

using Swag

func main()
{
    var a = true
    a += true; }
